Add class Duck, refactoring class Dog, add images in index.html

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -12,6 +12,8 @@
 <img id="grass" src="images/game_board_grass.png" alt="grass">
 
 <img id="dogImg" src="images/dog.png" alt="dog">
+<img id="ducksFlyUpImg" src="images/duck_fly_up.png" alt="">
+<img id="ducksFall" src="images/duck_fall.png" alt="">
 
 <canvas id="canvas" width="768" height="720">
 
