--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,6 +6,9 @@
 
 body {
   background-color: dimgrey;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 img {
@@ -13,8 +16,6 @@ img {
 }
 
 #canvas {
-  margin: 50px auto;
-  display: block;
   border: 2px solid black;
   cursor: crosshair;
 }
