Create menu and add it

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -9,6 +9,7 @@
   <title>DuckHunt</title>
 </head>
 <body>
+<img id="logo" src="images/logo.png" alt="logo">
 <img id="background" src="images/game_board.png" alt="background">
 <img id="grass" src="images/game_board_grass.png" alt="grass">
 
