Display available shots in game screen. Update game_boards (higher resolution)

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -12,7 +12,7 @@
 <img id="logo" src="images/logo.png" alt="logo">
 <img id="background" src="images/game_board.png" alt="background">
 <img id="grass" src="images/game_board_grass.png" alt="grass">
-
+<img id="shot" src="images/shot.png" alt="shot">
 <img id="dogImg" src="images/dog.png" alt="dog">
 <img id="ducksFlyUpImg" src="images/duck_fly_up.png" alt="">
 <img id="ducksFall" src="images/duck_fall.png" alt="">
