Display info about hits at bottom bar

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -13,6 +13,10 @@
 <img id="background" src="images/game_board.png" alt="background">
 <img id="grass" src="images/game_board_grass.png" alt="grass">
 <img id="shot" src="images/shot.png" alt="shot">
+
+<img id="subround_duck_white" src="images/subround_duck_white.png" alt="subround duck white">
+<img id="subround_duck_red" src="images/subround_duck_red.png" alt="subround duck red">
+
 <img id="dogImg" src="images/dog.png" alt="dog">
 <img id="ducksFlyUpImg" src="images/duck_fly_up.png" alt="">
 <img id="ducksFall" src="images/duck_fall.png" alt="">
