Display Round # button at start round

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -14,6 +14,10 @@
 <img id="grass" src="images/game_board_grass.png" alt="grass">
 <img id="shot" src="images/shot.png" alt="shot">
 
+<img id="small_button" src="images/small_button.png" alt="small button">
+<img id="big_button" src="images/big_button.png" alt="big button">
+
+
 <img id="subround_duck_white" src="images/subround_duck_white.png" alt="subround duck white">
 <img id="subround_duck_red" src="images/subround_duck_red.png" alt="subround duck red">
 
