Add volume control

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,8 +7,25 @@
 body {
   background-color: dimgrey;
   display: flex;
-  align-content: center;
+  //align-content: center;
   justify-content: center;
+
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.volume {
+  align-self: flex-end;
+}
+
+.fas {
+  cursor: pointer;
+  &:hover {
+    color: #262626;
+  }
 }
 
 img {
