--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/19212f7cbb.js" crossorigin="anonymous"></script>
+
   <title>DuckHunt</title>
 </head>
 <body>
@@ -28,10 +30,14 @@
 <img hidden id="ducksFlyUpImg" src="images/duck_fly_up.png" alt="">
 <img hidden id="ducksFall" src="images/duck_fall.png" alt="">
 
-<canvas id="canvas" width="768" height="720">
+<div class="container">
+  <canvas id="canvas" width="768" height="720"></canvas>
 
-</canvas>
-
-
+  <div class="volume">
+    <i class="fas fa-volume-down"></i>
+    <i class="fas fa-volume-up"></i>
+    <i class="fas fa-volume-mute"></i>
+  </div>
+</div>
 </body>
 </html>
