Load assets before start game, add loading screen

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -12,23 +12,9 @@
   <title>DuckHunt</title>
 </head>
 <body>
-
-<img hidden id="logo" src="images/logo.png" alt="logo" class="hidden">
-<img hidden id="background" src="images/game_board.png" alt="background">
-<img hidden id="grass" src="images/game_board_grass.png" alt="grass">
-<img hidden id="shot" src="images/shot.png" alt="shot">
-
-<img hidden id="small_button" src="images/small_button.png" alt="small button">
-<img hidden id="big_button" src="images/big_button.png" alt="big button">
-
-
-<img hidden id="subround_duck_white" src="images/subround_duck_white.png" alt="subround duck white">
-<img hidden id="subround_duck_red" src="images/subround_duck_red.png" alt="subround duck red">
-
-
-<img hidden id="dogImg" src="images/dog.png" alt="dog">
-<img hidden id="ducksFlyUpImg" src="images/duck_fly_up.png" alt="">
-<img hidden id="ducksFall" src="images/duck_fall.png" alt="">
+<div class="loading visible">
+  <div class="content"></div>
+</div>
 
 <div class="container">
   <canvas id="canvas" width="768" height="720"></canvas>
