--- a/src/sass/_loading.scss
+++ b/src/sass/_loading.scss
@@ -6,8 +6,10 @@
   left: 0;
   width: 100%;
   height: 100%;
-  display: none;
-
+  opacity: 0;
+  display: flex;
+  visibility: hidden;
+  transition: .3s;
   align-items: center;
   justify-content: center;
   z-index: 3;
@@ -15,12 +17,13 @@
   .content {
     width: 40px;
     height: 40px;
-    background: white;
+    background: #00eede;
     animation: rotateplane 1.2s infinite ease-in-out;
   }
 
   &.visible {
-    display: flex;
+    visibility: visible;
+    opacity: 100%;
   }
 }
 
