--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -5,17 +5,20 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Teko:wght@300&display=swap" rel="stylesheet">
+<!--  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">-->
+<!--  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">-->
   <script src="https://kit.fontawesome.com/19212f7cbb.js" crossorigin="anonymous"></script>
 
   <title>DuckHunt</title>
 </head>
 <body>
 <div class="loading visible">
-  <div class="content"></div>
-</div>
+  <div class="content">
+    <p>Loading</p>
+  </div>
 
+</div>
 <div class="container">
   <canvas id="canvas" width="768" height="720"></canvas>
 
