--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Teko:wght@300&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/19212f7cbb.js" crossorigin="anonymous"></script>
+  <link rel="icon" type="image/png" href="images/favicon.ico"/>
 
   <title>DuckHunt</title>
 </head>
