Add mobile page

--- a/src/templates/template.html
+++ b/src/templates/template.html
@@ -27,5 +27,17 @@
     <i class="fas fa-volume-mute"></i>
   </div>
 </div>
+
+<div class="mobiles">
+  <h2>I'm sorry but you have to small resolution to this game <i class="far fa-sad-cry"></i></h2>
+ 
+  <h3>Look at this awesome demo and check <a href="https://github.com/Adi52/DuckHunt">it</a> on desktop! <i class="fas fa-crown"></i></h3>
+
+  <a href="https://github.com/Adi52/DuckHunt">
+    <img src="https://raw.githubusercontent.com/Adi52/DuckHunt/master/readme_images/duck-hunt-game.gif" alt="Duck hunt gameplay demo">
+  </a>
+
+  <p>Contact <a href="https://github.com/Adi52">@bielinski.dev</a></p>
+</div>
 </body>
 </html>
